adding content to about us and moving the map around

--- a/bountiful-foods/aboutus.html
+++ b/bountiful-foods/aboutus.html
@@ -37,35 +37,61 @@
         </nav>
         <div class="currentDate"><span id="yearNow"></span> </div>
     </header>
+    <main>
+        <div class="history">
+            <p>
+                At Bountiful Foods, we’ve been serving the needs of the local community since 1925. Originally owned and
+                operated by John Doe as the Corner foods shot, we’ve worked to provide locally grown food to the
+                community and benefit local farms since our humble beginnings.
+            </p>
+            <p>After starting out selling food goods, we’ve expanded to selling other additional goods such as kitchen
+                and cleaning items. We also support our local farming community by sponsoring a farmers market every
+                other Saturday to being our local customers to our suppliers to help our customers understand how we do
+                business.
+            </p>
+        </div>
+        <div class="contactInfo">
+            <p>San Diego City Hall</p>
+            <p>Civic Ctr Plz,</p>
+            <p>info@sandiego.org</p>
+            <p>Phone: 619-236-5555</p>
+        </div>
+        <div class="localmap">
+            <p>Come Visit Us</p>
+            <iframe class="sanMap" title="mapOfSanDiego"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d52604.71619832885!2d-117.15937589161861!3d32.71592166664419!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80d954f09f671625%3A0x71060b854cb6d77b!2sSan%20Diego%20City%20Hall!5e0!3m2!1sen!2sus!4v1670881049636!5m2!1sen!2sus"
+                style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </main>
+    <!-- footer section -->
+    <footer>
+        <!-- section 1 logo and address info -->
+        <div class="logoInfo">
+            <img class="footImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
+            <!-- this is the placeholder logo-->
+            <p>Kaysville City Chamber of Commerce</p>
+            <p>23 East Center Street</p>
+            <p> Kaysville, UT 84037</p>
+        </div>
 
-        <!-- footer section -->
-        <footer>
-            <!-- section 1 logo and address info -->
-            <div class="logoInfo">
-                <img class="footImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
-                <!-- this is the placeholder logo-->
-                <p>Kaysville City Chamber of Commerce</p>
-                <p>23 East Center Street</p>
-                <p> Kaysville, UT 84037</p>
-            </div>
-    
-            <!-- section 2 email, phone, map -->
-            <div class="contactInfo">
-                <p>info@Kaysvillecc.org</p>
-                <p>Phone: 801-555-5555</p>
-                <p>&#128506; Location Map</p>
-            </div>
-    
-            <!-- bottom footer section -->
-            <div class="bottomFoot">
-                <hr>
-                <div class="footer1">&copy; <span id="year"></span> Bountiful Foods | Nick Richards | WDD 230 Final
-                    | Last Updated:<span id="modded"></span></div>
-                <script src="#"></script>
-            </div>
-            <script src="scripts/menu.js"></script>
+        <!-- section 2 email, phone, map -->
+        <div class="contactInfo">
+            <p>info@Kaysvillecc.org</p>
+            <p>Phone: 801-555-5555</p>
+            <p>&#128506; Location Map</p>
+        </div>
 
-        </footer>
+        <!-- bottom footer section -->
+        <div class="bottomFoot">
+            <hr>
+            <div class="footer1">&copy; <span id="year"></span> Bountiful Foods | Nick Richards | WDD 230 Final
+                | Last Updated:<span id="modded"></span></div>
+            <script src="#"></script>
+        </div>
+        <script src="scripts/menu.js"></script>
+
+    </footer>
 
 </body>
 
