adding footer items and lazy loading and js starting template

--- a/bountiful-foods/aboutus.html
+++ b/bountiful-foods/aboutus.html
@@ -87,8 +87,9 @@
             <hr>
             <div class="footer1">&copy; <span id="year"></span> Bountiful Foods | Nick Richards | WDD 230 Final
                 | Last Updated:<span id="modded"></span></div>
-            <script src="#"></script>
+            <!-- <script src="#"></script> -->
         </div>
+        <script src="scripts/script.js"></script>
         <script src="scripts/menu.js"></script>
 
     </footer>
