--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -46,22 +46,25 @@
                 climate. Immense Balboa Park is the site of the renowned San Diego Zoo, as well as numerous art galleries, artist
                 studios, museums and gardens. A deep harbor is home to a large active naval fleet, with the USS Midway,
                 an aircraft-carrier-turned-museum, open to the public.</p>
-            <picture class="pic1">
-                <source media="(min-width: 2560px)" srcset="images/coronado-bridge-san-diego-califo-LARGE.webp "> <!-- large display-->
-                <source media="(min-width: 1440px)" srcset="images/coronado-bridge-san-diego-califo-LAPTOP.webp "> <!-- laptop laptop-->
-                <source media="(min-width: 768px)" srcset="images/coronado-bridge-san-diego-califo-TABLET.webp "> <!-- tablet screen-->
-                <img src="images/coronado-bridge-san-diego-califo-MOBILE.webp" alt="picture of bridge over water" height="283" width="425"> <!-- mobile display size-->
+            <picture class="pic1">            
+                 <source media="(min-width: 2560px)" srcset="images/coronado-bridge-san-diego-califo-LARGE.webp ">
+                 <source media="(min-width: 1440px)" srcset="images/coronado-bridge-san-diego-califo-LAPTOP.webp ">
+                 <source media="(min-width: 768px)"  srcset="images/coronado-bridge-san-diego-califo-TABLET.webp ">
+                 <source media="(min-width: 425px)"  srcset="images/coronado-bridge-san-diego-califo-MOBILE.webp ">
+                 <img src="images/coronado-bridge-san-diego-califo-MOBILE.webp" alt="picture of bridge over water" height="283" width="425" loading="lazy">
             </picture>
             <picture class="pic2">
                 <source media="(min-width: 2560px)" srcset="images/downtown-san-diego-bay-LARGE.webp "> <!-- large display-->
                 <source media="(min-width: 1440px)" srcset="images/downtown-san-diego-bay-LAPTOP.webp "> <!-- laptop laptop-->
                 <source media="(min-width: 768px)" srcset="images/downtown-san-diego-bay-TABLET.webp "> <!-- tablet screen-->
-                <img src="images/downtown-san-diego-bay-MOBILE.webp" alt="picture of a ship harbor during the day" height="283" width="425"> <!-- mobile display size-->
+                <source media="(min-width: 768px)" srcset="images/downtown-san-diego-bay-MOBILE.webp "> <!-- mobile screen-->
+                <img src="images/downtown-san-diego-bay-MOBILE.webp" alt="picture of a ship harbor during the day" height="283" width="425">
             </picture>
             <picture class="pic3">
                 <source media="(min-width: 2560px)" srcset="images/San-Diego-Symphony-LARGE.webp "> <!-- large display-->
                 <source media="(min-width: 1440px)" srcset="images/San-Diego-Symphony-LAPTOP.webp "> <!-- laptop laptop-->
                 <source media="(min-width: 768px)" srcset="images/San-Diego-Symphony-TABLET.webp "> <!-- tablet screen-->
+                <source media="(min-width: 768px)" srcset="images/downtown-san-diego-bay-MOBILE.webp "> <!-- mobile screen-->
                 <img src="images/San-Diego-Symphony-MOBILE.webp" alt="picture of outdoor theater at night" height="283" width="425"> <!-- mobile display size-->
             </picture>
         </div>
@@ -71,6 +74,7 @@
                 <source media="(min-width: 2560px)" srcset="images/pexels-valeriia-miller-LARGE.webp "> <!-- large display-->
                 <source media="(min-width: 1440px)" srcset="images/pexels-valeriia-miller-LAPTOP.webp "> <!-- laptop laptop-->
                 <source media="(min-width: 768px)" srcset="images/pexels-valeriia-miller-TABLET.webp "> <!-- tablet screen-->
+                <source media="(min-width: 768px)" srcset="images/downtown-san-diego-bay-MOBILE.webp "> <!-- mobile screen-->
                 <img src="images/pexels-valeriia-miller-MOBILE.webp" alt="picture of a fruit parfet" height="567" width="425"> <!-- mobile display size-->
             </picture>
             <button>Start Making Shake</button>
@@ -132,6 +136,9 @@
             </div>
             <!-- <script src="#"></script> -->
         </div>
+        <!-- <script src="scripts/lazyload.js" ></script> -->
+        <script src="scripts/weatherapiv2.js" ></script>
+        <script src="scripts/script.js"></script>
         <script src="scripts/menu.js"></script>
     </footer>
 </body>
