--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -77,7 +77,7 @@
                 <source media="(min-width: 768px)" srcset="images/downtown-san-diego-bay-MOBILE.webp "> <!-- mobile screen-->
                 <img src="images/pexels-valeriia-miller-MOBILE.webp" alt="picture of a fruit parfet" height="567" width="425"> <!-- mobile display size-->
             </picture>
-            <button>Start Making Shake</button>
+            <button id="myBtn">Start Making Shake</button>
         </div>
 
     </main>
@@ -108,6 +108,7 @@
             <!-- <script src="#"></script> -->
         </div>
         <!-- <script src="scripts/lazyload.js" ></script> -->
+        <script src="scripts/buttonSubmit.js"></script>
         <script src="scripts/weatherapiv2.js" ></script>
         <script src="scripts/script.js"></script>
         <script src="scripts/menu.js"></script>
