adding section to form

--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -39,7 +39,7 @@
     </header>
     <!-- FORM -->
     <div class="mainForm firstForm">
-        <form action="thankyou.html">
+        <form>
             <label for="fname">First name: </label>
             <input type="text" id="fname" class="required" name="fname" placeholder="firstname" required>
 
@@ -51,7 +51,6 @@
 
             <p>Specialty Drink:</p>
             <hr>
-
             <label for="drink_1" class="memLab">Fruit 1
                 <select name="fruit1" id="fruit1">
                     <option value=""></option>
@@ -66,17 +65,17 @@
                 <select name="fruit3" id="fruit3">
                     <option value=""></option>
                 </select>
-
             <hr>
-
             <label for="textarea">Special Instructions:
                 <textarea name="description" placeholder="Type here" id="textarea"></textarea>
             </label>
 
+            <input type="submit" value="Complete form" class="btn">
 
-
-                        <input type="submit" value="Complete form" class="btn">
         </form>
+        <div class="orderSum">
+            
+        </div>
     </div>
 
     <!-- footer section -->
