--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -49,7 +49,7 @@
             <label for="mphone">Cell phone:</label>
             <input type="tel" name="mphone" id="mphone" class="required" placeholder="(555)867-5309" required>
 
-            <p>Specialty Drink:</p>
+            <p>Create your Specialty Drink</p>
             <hr>
             <label for="drink_1" class="memLab">Fruit 1
                 <select name="fruit1" id="fruit1">
@@ -74,7 +74,7 @@
 
         </form>
         <div class="orderSum">
-            
+
         </div>
     </div>
 
