--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -39,7 +39,7 @@
     </header>
     <!-- FORM -->
     <div class="mainForm firstForm">
-        <form>
+        <form onsubmit="return false;">
             <label for="fname">First name: </label>
             <input type="text" id="fname" class="required" name="fname" placeholder="firstname" required>
 
@@ -70,7 +70,7 @@
                 <textarea name="description" placeholder="Type here" id="textarea"></textarea>
             </label>
 
-            <input type="submit" value="Complete form" class="btn">
+            <input onclick="submitForm()" type="submit" value="Complete form" class="btn">
 
         </form>
         <div class="orderSum">
@@ -106,6 +106,8 @@
         <script src="scripts/script.js"></script>
         <script src="scripts/menu.js"></script>
         <script src="scripts/fruitData.js"></script>
+        <script src="scripts/localFruitStorage.js"></script>
+        <script src="scripts/userActions.js"></script>
 
     </footer>
 </body>
