--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -9,6 +9,7 @@
     <title>Bountiful Foods Home</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/mobile.css">
+    <link rel="stylesheet" href="styles/medium.css">
 </head>
 
 <body>
