--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -19,23 +19,20 @@
             <!-- this is the placeholder logo-->
             <img class="headImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
             <h1>Fresh</h1>
-            <div class="socialStuff">
+            <button onclick="openNav()">&#9776;</button>
+        </div>
+        <!-- navigation bar -->
+        <nav class="navbar main-navigation">
+            <div id="primaryNav">
+                <a href="javascript:void(0)" onclick="closeNav()">&times;</a>
+                <a href="home.html">Home</a>
+                <a href="aboutus.html">About Us</a>
                 <!-- icons -->
-                <a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46"
+                <a href="https://www.facebook.com/"><img src="images/facebook.webp" height="46" width="46"
                         alt="link to facebook website"></a>
                 <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
                         alt="link to linkedin website"></a>
             </div>
-        </div>
-        <!-- navigation bar -->
-        <nav class="navbar main-navigation">
-
-            <button class="hamburger" onclick="toggleMenu()">&#9776;</button>
-            <ul id="primaryNav">
-                <li class="nav-item"><a href="home.html">Home</a></li>
-                <li class="nav-item"><a href="aboutus.html">About Us</a></li>
-            </ul>
-
         </nav>
         <div class="currentDate"><span id="yearNow"></span> </div>
     </header>
@@ -53,19 +50,19 @@
 
             <p>Create your Specialty Drink</p>
             <hr>
-            <label for="drink_1" class="memLab">Fruit 1
+            <label for="fruit1" class="fruitMix">Fruit 1</label>
                 <select name="fruit1" id="fruit1">
-                    <option value=""></option>
+                    <option value="">Select</option>
                 </select>
 
-            <label for="drink_1" class="memLab">Fruit 2
+            <label for="fruit2" class="fruitMix">Fruit 2</label>
                 <select name="fruit2" id="fruit2">
-                    <option value=""></option>
+                    <option value="">Select</option>
                 </select>
 
-            <label for="drink_1" class="memLab">Fruit 3
+            <label for="fruit3" class="fruitMix">Fruit 3</label>
                 <select name="fruit3" id="fruit3">
-                    <option value=""></option>
+                    <option value="">Select</option>
                 </select>
             <hr>
             <label for="textarea">Special Instructions:
@@ -109,6 +106,7 @@
         <script src="scripts/menu.js"></script>
         <script src="scripts/fruitData.js"></script>
         <script src="scripts/localFruitStorage.js"></script>
+        <script src="scripts/navBar.js"></script>
         <script src="scripts/userActions.js"></script>
 
     </footer>
