--- a/bountiful-foods/aboutus.html
+++ b/bountiful-foods/aboutus.html
@@ -20,13 +20,6 @@
             <img class="headImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
             <h1>About Us</h1>
             <button onclick="openNav()">&#9776;</button>
-            <div class="socialStuff">
-                <!-- icons -->
-                <a href="https://www.facebook.com/"><img src="images/facebook.png" height="46" width="46"
-                        alt="link to facebook website"></a>
-                <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
-                        alt="link to linkedin website"></a>
-            </div>
         </div>
         <!-- navigation bar -->
         <nav class="navbar main-navigation">
@@ -34,6 +27,8 @@
                 <a href="javascript:void(0)" onclick="closeNav()">&times;</a>
                 <a href="home.html">Home</a>
                 <a href="fresh.html">Fresh</a>
+                <a href="https://www.facebook.com/"><img src="images/facebook.webp" height="46" width="46" alt="link to facebook website"></a>
+                <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46" alt="link to linkedin website"></a>
             </div>
         </nav>
         <div class="currentDate"><span id="yearNow"></span> </div>
