--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -28,11 +28,8 @@
                 <a href="javascript:void(0)" onclick="closeNav()">&times;</a>
                 <a href="fresh.html">Fresh</a>
                 <a href="aboutus.html">About Us</a>
-                    <!-- icons -->
-                    <a href="https://www.facebook.com/"><img src="images/facebook.webp" height="46" width="46"
-                            alt="link to facebook website"></a>
-                    <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46"
-                            alt="link to linkedin website"></a>
+                <a href="https://www.facebook.com/"><img src="images/facebook.webp" height="46" width="46" alt="link to facebook website"></a>
+                <a href="https://www.linkedin.com/"><img src="images/linkedin_icon.webp" height="46" width="46" alt="link to linkedin website"></a>
             </div>
         </nav>
         <div class="currentDate"><span id="yearNow"></span> </div>
