working on form page

--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -47,22 +47,28 @@
 
             <p>Create your Specialty Drink</p>
             <hr>
-            <label for="fruit1" class="fruitMix">Fruit 1</label>
-                <select name="fruit1" id="fruit1">
-                    <option value="">Select</option>
-                </select>
-
-            <label for="fruit2" class="fruitMix">Fruit 2</label>
-                <select name="fruit2" id="fruit2">
-                    <option value="">Select</option>
-                </select>
-
-            <label for="fruit3" class="fruitMix">Fruit 3</label>
-                <select name="fruit3" id="fruit3">
-                    <option value="">Select</option>
-                </select>
+            <div class="fruitSelect">
+                <div class="fruitLab">
+                    <label for="fruit1" class="fruitMix">Fruit 1</label>
+                        <select name="fruit1" id="fruit1">
+                            <option value="">Select</option>
+                        </select>
+                </div>
+                <div class="fruitLab">
+                    <label for="fruit2" class="fruitMix">Fruit 2</label>
+                        <select name="fruit2" id="fruit2">
+                            <option value="">Select</option>
+                        </select>
+                </div>
+                <div class="fruitLab">
+                    <label for="fruit3" class="fruitMix">Fruit 3</label>
+                        <select name="fruit3" id="fruit3">
+                            <option value="">Select</option>
+                        </select>
+                </div>
+            </div>
             <hr>
-            <label for="textarea">Special Instructions:
+            <label class="textArea" for="textarea">Special Instructions:
                 <textarea name="description" placeholder="Type here" id="textarea"></textarea>
             </label>
 
