adding more styling to form

--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -36,16 +36,18 @@
     <!-- FORM -->
     <div class="mainForm firstForm">
         <form onsubmit="return false;">
-            <label for="fname">First name: </label>
-            <input type="text" id="fname" class="required" name="fname" placeholder="firstname" required>
+            <div class="formInput">
+                <label for="fname">First name: </label>
+                <input type="text" id="fname" class="required" name="fname" placeholder="firstname" required>
 
-            <label for="email">Email:</label>
-            <input type="email" name="mail" id="email" class="required" placeholder="something@gmail.com" required>
+                <label for="email">Email:</label>
+                <input type="email" name="mail" id="email" class="required" placeholder="something@gmail.com" required>
 
-            <label for="mphone">Cell phone:</label>
-            <input type="tel" name="mphone" id="mphone" class="required" placeholder="(555)867-5309" required>
+                <label for="mphone">Cell phone:</label>
+                <input type="tel" name="mphone" id="mphone" class="required" placeholder="(555)867-5309" required>
 
-            <p>Create your Specialty Drink</p>
+                <p>Create your Specialty Drink</p>
+            </div>
             <hr>
             <div class="fruitSelect">
                 <div class="fruitLab">
