adding more text

--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -42,7 +42,12 @@
                 climate. Immense Balboa Park is the site of the renowned San Diego Zoo, as well as numerous art galleries, artist
                 studios, museums and gardens. A deep harbor is home to a large active naval fleet, with the USS Midway,
                 an aircraft-carrier-turned-museum, open to the public.</p>
-            <p></p>
+            <p>In East County, the terrain changes from gentle foothills to mile-high mountains and historic mining towns such as,
+                Julian, down to the 600,000-acre Anza-Borrego Desert State Park, offering visitor’s plenty of opportunities to hike,
+                camp, fish, observe wildlife and much more. In San Diego's North County, the agricultural community produces
+                quantities of flowers and magnificent produce. Along the west, 70 miles of Pacific Ocean coastline not only supports
+                year-round outdoor recreation, such as surfing, boating, sailing, and swimming, but also important scientific
+                research at the Scripps Institution of Oceanography.</p>
             <picture class="pic1">            
                  <source media="(min-width: 2560px)" srcset="images/coronado-bridge-san-diego-califo-LARGE.webp ">
                  <source media="(min-width: 1440px)" srcset="images/coronado-bridge-san-diego-califo-LAPTOP.webp ">
