adding new style to header to fix it

--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -19,8 +19,10 @@
         <div class="headItems">
             <!-- this is the placeholder logo-->
             <img class="headImg" src="images/california.webp" alt="image of a state building" height="64" width="64">
-            <h1>Bountiful Foods</h1>
-            <button onclick="openNav()">&#9776;</button>
+            <div class="headItems">
+                <button onclick="openNav()">&#9776;</button>
+                <h1>Bountiful Foods</h1>
+            </div>
         </div>
         <!-- navigation bar -->
         <nav class="navbar main-navigation">
