--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -16,7 +16,7 @@
 <body>
     <header class="mainHeader">
         <div id="banner"></div>
-        <div class="headItems">
+        <div class="heading">
             <!-- this is the placeholder logo-->
             <img class="headImg" src="images/california.webp" alt="image of a state building" height="64" width="64">
             <div class="headItems">
