adjusted footer on all pages

--- a/bountiful-foods/fresh.html
+++ b/bountiful-foods/fresh.html
@@ -84,24 +84,25 @@
     <!-- footer section -->
     <footer>
         <!-- section 1 logo and address info -->
-        <div class="logoInfo">
-            <img class="footImg" src="images/congress_icon.webp" alt="image of a state building" height="64" width="64">
-            <!-- this is the placeholder logo-->
-            <p>Kaysville City Chamber of Commerce</p>
-            <p>23 East Center Street</p>
-            <p> Kaysville, UT 84037</p>
-        </div>
-
-        <!-- section 2 email, phone, map -->
-        <div class="contactInfo">
-            <p>info@Kaysvillecc.org</p>
-            <p>Phone: 801-555-5555</p>
-            <p>&#128506; Location Map</p>
+        <img class="footImg" src="images/california.webp" alt="image of a state building" height="64" width="64">
+        <div class="footInfo">
+            <div class="logoInfo">
+                <!-- this is the placeholder logo-->
+                <p>San Diego City Hall</p>
+                <p>Civic Ctr Plz,</p>
+                <p>San Diego, CA 92101</p>
+            </div>
+    
+            <!-- section 2 email, phone, map -->
+            <div class="contactInfo">
+                <p>info@sandiego.org</p>
+                <p>Phone: 619-236-5555</p>
+                <p>&#128506; Location Map</p>
+            </div>
         </div>
 
         <!-- bottom footer section -->
         <div class="bottomFoot">
-            <hr>
             <div class="footer1">&copy; <span id="year"></span> Bountiful Foods | Nick Richards | WDD 230 Final
                 | Last Updated:<span id="modded"></span></div>
             <!-- <script src="#"></script> -->
