--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -94,23 +94,24 @@
     <footer>
         <!-- section 1 logo and address info -->
         <img class="footImg" src="images/california.webp" alt="image of a state building" height="64" width="64">
-        <div class="logoInfo">
-            <!-- this is the placeholder logo-->
-            <p>San Diego City Hall</p>
-            <p>Civic Ctr Plz,</p>
-            <p>San Diego, CA 92101</p>
+        <div class="footInfo">
+            <div class="logoInfo">
+                <!-- this is the placeholder logo-->
+                <p>San Diego City Hall</p>
+                <p>Civic Ctr Plz,</p>
+                <p>San Diego, CA 92101</p>
+            </div>
+    
+            <!-- section 2 email, phone, map -->
+            <div class="contactInfo">
+                <p>info@sandiego.org</p>
+                <p>Phone: 619-236-5555</p>
+                <p>&#128506; Location Map</p>
+            </div>
         </div>
-
-        <!-- section 2 email, phone, map -->
-        <div class="contactInfo">
-            <p>info@sandiego.org</p>
-            <p>Phone: 619-236-5555</p>
-            <p>&#128506; Location Map</p>
-        </div>
-
+    
         <!-- bottom footer section -->
         <div class="bottomFoot">
-            <hr>
             <div class="footer1">&copy; <span id="year"></span> Bountiful Foods | Nick Richards | WDD 230 Final
                 | Last Updated:<span id="modded"></span>
             </div>
@@ -119,7 +120,7 @@
         <!-- <script src="scripts/lazyload.js" ></script> -->
         <script src="scripts/buttonSubmit.js"></script>
         <script src="scripts/script.js"></script>
-        <script src="scripts/weatherapiv2.js" ></script>
+        <script src="scripts/weatherapiv2.js"></script>
         <script src="scripts/menu.js"></script>
         <script src="scripts/localFruitStorage.js"></script>
         <script src="scripts/userActions.js"></script>
