--- a/bountiful-foods/home.html
+++ b/bountiful-foods/home.html
@@ -59,7 +59,7 @@
             </picture>
             <div class="grid-container">
                 <picture class="pic2">
-                    <source media="(min-width: 2560px)" srcset="images/downtown-san-diego-bay-LARGE.webp "> <!-- large display-->
+                    <source media="(min-width: 2560px)" srcset="images/downtown-san-diego-bay-LARGE.webp "> 
                     <source media="(min-width: 1440px)" srcset="images/downtown-san-diego-bay-LAPTOP.webp "> <!-- laptop laptop-->
                     <source media="(min-width: 768px)" srcset="images/downtown-san-diego-bay-TABLET.webp "> <!-- tablet screen-->
                     <source media="(min-width: 768px)" srcset="images/downtown-san-diego-bay-MOBILE.webp "> <!-- mobile screen-->
@@ -90,19 +90,19 @@
         </div>
 
     </main>
-    <!-- footer section -->
+
     <footer>
-        <!-- section 1 logo and address info -->
+
         <img class="footImg" src="images/california.webp" alt="image of a state building" height="64" width="64">
         <div class="footInfo">
             <div class="logoInfo">
-                <!-- this is the placeholder logo-->
+
                 <p>San Diego City Hall</p>
                 <p>Civic Ctr Plz,</p>
                 <p>San Diego, CA 92101</p>
             </div>
     
-            <!-- section 2 email, phone, map -->
+
             <div class="contactInfo">
                 <p>info@sandiego.org</p>
                 <p>Phone: 619-236-5555</p>
@@ -110,14 +110,14 @@
             </div>
         </div>
     
-        <!-- bottom footer section -->
+
         <div class="bottomFoot">
             <div class="footer1">&copy; <span id="year"></span> Bountiful Foods | Nick Richards | WDD 230 Final
                 | Last Updated:<span id="modded"></span>
             </div>
-            <!-- <script src="#"></script> -->
+
         </div>
-        <!-- <script src="scripts/lazyload.js" ></script> -->
+
         <script src="scripts/buttonSubmit.js"></script>
         <script src="scripts/script.js"></script>
         <script src="scripts/weatherapiv2.js"></script>
